feat:完成家族人员认领

--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ WECHAT_APPSECRET=be5c9d071d3ce13ad27c5144e7a4ee45
 
 # JWT (JSON Web Token) 配置
 JWT_SECRET=a_very_secret_and_long_string_for_jwt
+
+# 每个用户可以加入/创建的家族数量上限
+MAX_FAMILIES_PER_USER=2
