--- a/.env
+++ b/.env
@@ -16,3 +16,19 @@ JWT_SECRET=a_very_secret_and_long_string_for_jwt
 
 # 每个用户可以加入/创建的家族数量上限
 MAX_FAMILIES_PER_USER=2
+
+# --- 云存储 (腾讯云COS) ---
+# 填写以下信息以启用腾讯云COS，留空则使用本地存储
+# TENCENT_COS_SECRET_ID=YOUR_SECRET_ID
+# TENCENT_COS_SECRET_KEY=YOUR_SECRET_KEY
+# TENCENT_COS_BUCKET=YOUR_BUCKET_NAME-APPID
+# TENCENT_COS_REGION=ap-guangzhou
+# # 您COS存储桶的公网访问URL前缀, 例如: https://your-bucket.cos.ap-guangzhou.myqcloud.com
+# TENCENT_COS_URL_PREFIX=https://your-bucket.cos.ap-guangzhou.myqcloud.com
+
+# --- 本地存储 (降级方案) ---
+# 图片在服务器上存储的相对路径
+LOCAL_STORAGE_PATH=uploads/images
+# 您服务器对外提供静态服务的URL前缀
+# 例如: https://api.itjl.top:91
+SERVER_PUBLIC_URL=http://192.168.10.31:3000
