--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "cos-nodejs-sdk-v5": "^2.16.0-beta.3",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.2",
     "yarn": "^1.22.22"
   }
