feat:使用TypeScript重构服务端代码

--- a/.env
+++ b/.env
@@ -1,18 +1,30 @@
+# 服务器配置
+PORT=3000
+
 # 数据库配置
 # DB_HOST=172.17.0.10 # 远程数据库的地址
 # DB_PORT=3306
-DB_HOST=www.itjl.top # 远程数据库的地址
+DB_HOST=www.itjl.top
 DB_PORT=3307
-DB_USER=family_tree         # 远程数据库的用户名
-DB_PASSWORD=Aa19890122. # 远程数据库的密码
-DB_NAME=family_tree            # 远程数据库的库名
+DB_USER=family_tree
+DB_PASSWORD=a19890122.
+DB_NAME=family_tree
 
-# 微信小程序配置
+# JWT配置
+JWT_SECRET=pqowieurytalskdjfhg2025
+JWT_REFRESH_SECRET=poiuytrewqasdfghjkl2025
+
+# 日志配置
+LOG_LEVEL=info
+
+# 应用配置
+NODE_ENV=development
+API_PREFIX=/api
+
+# 微信小程序配置（如果需要）
 WECHAT_APPID=wx0ef817527928a45e
-WECHAT_APPSECRET=be5c9d071d3ce13ad27c5144e7a4ee45
+WECHAT_SECRET=be5c9d071d3ce13ad27c5144e7a4ee45
 
-# JWT (JSON Web Token) 配置
-JWT_SECRET=a_very_secret_and_long_string_for_jwt
 
 # 每个用户可以加入/创建的家族数量上限
 MAX_FAMILIES_PER_USER=2
@@ -30,5 +42,6 @@ MAX_FAMILIES_PER_USER=2
 # 图片在服务器上存储的相对路径
 LOCAL_STORAGE_PATH=uploads/images
 # 您服务器对外提供静态服务的URL前缀
-# 例如: https://api.itjl.top:91
-SERVER_PUBLIC_URL=http://192.168.10.31:3000
+# 例如: https://api.itjl.top
+SERVER_PUBLIC_URL=http://11.2.230.145:3000
+PORT=3000;
