--- a/.env
+++ b/.env
@@ -2,12 +2,10 @@
 PORT=3000
 
 # 数据库配置
-# DB_HOST=172.17.0.10 # 远程数据库的地址
-# DB_PORT=3306
 DB_HOST=www.itjl.top
 DB_PORT=3307
 DB_USER=family_tree
-DB_PASSWORD=a19890122.
+DB_PASSWORD=Aa19890122.
 DB_NAME=family_tree
 
 # JWT配置
@@ -44,4 +42,4 @@ LOCAL_STORAGE_PATH=uploads/images
 # 您服务器对外提供静态服务的URL前缀
 # 例如: https://api.itjl.top
 SERVER_PUBLIC_URL=http://11.2.230.145:3000
-PORT=3000;
+PORT=3000
