feat:提交部分修改

--- a/.env
+++ b/.env
@@ -41,5 +41,7 @@ MAX_FAMILIES_PER_USER=2
 LOCAL_STORAGE_PATH=uploads/images
 # 您服务器对外提供静态服务的URL前缀
 # 例如: https://api.itjl.top
-SERVER_PUBLIC_URL=http://192.168.10.31:3000
+
+# SERVER_PUBLIC_URL=http://192.168.10.31:3000
+SERVER_PUBLIC_URL=http://11.2.230.145:3000
 PORT=3000
