--- a/.env
+++ b/.env
@@ -2,8 +2,10 @@
 PORT=3000
 
 # 数据库配置
-DB_HOST=172.17.0.10
-DB_PORT=3306
+# DB_HOST=172.17.0.10
+# DB_PORT=3306
+DB_HOST=www.itjl.top
+DB_PORT=3307
 DB_USER=family_tree
 DB_PASSWORD=Aa19890122.
 DB_NAME=family_tree
@@ -42,6 +44,7 @@ LOCAL_STORAGE_PATH=uploads/images
 # 您服务器对外提供静态服务的URL前缀
 # 例如: https://api.itjl.top
 
-SERVER_PUBLIC_URL=https://api.ispace.top
+# SERVER_PUBLIC_URL=https://api.ispace.top
+SERVER_PUBLIC_URL=http://192.168.10.31:3000
 # SERVER_PUBLIC_URL=http://11.2.230.145:3000
 PORT=3000
