fix:修复配偶关联失败问题

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ PORT=3000
 # 数据库配置
 DB_HOST=172.17.0.10
 DB_PORT=3306
+# DB_HOST=www.itjl.top
+# DB_PORT=3307
 DB_USER=family_tree
 DB_PASSWORD=Aa19890122.
 DB_NAME=family_tree
